--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>🚽 SeatEasy</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="/dist/css/main.min.css">
+  <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 
 <body>
@@ -26,10 +26,11 @@
     </div>
   </div>
   <div class="col-9" id="map"></div>
+  <div id="message"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
   <script src="dist/js/app.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2S-LELreF5XRdVqrPIUHk28GLadxfHls&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2S-LELreF5XRdVqrPIUHk28GLadxfHls&callback=initMap" async defer onerror="mapError()"></script>
 </body>
 
 </html>
